--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Yug's Resume</h1>
         <h1>Yug Rakeshbhai Shah</h1>
-        <img src="./MyPhoto.png" width="250">
+        <img src="./MyPhoto.jpeg" height="250">
         <hr />
 
         <h2>About</h2>
